Java level upgraded

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               Python - ⭐⭐⭐⭐⭐
             </li>
             <li>
-              Java - ⭐⭐⭐
+              Java - ⭐⭐⭐⭐
             </li>
           </ul>
         </div>
